--- a/settings.html
+++ b/settings.html
@@ -1,11 +1,11 @@
 <!-- settings.html -->
 <div class="list-group-item">
-    <h4>Telegram Connector Settings</h4>
+    <h4>Telegram Connector 设置</h4>
     <div class="form-group">
-        <label for="telegram_bridge_url">Bridge Server WebSocket URL</label>
-        <input type="text" id="telegram_bridge_url" class="text_pole" placeholder="e.g., ws://127.0.0.1:8080">
-        <div id="telegram_connection_status" style="margin-top: 10px; font-weight: bold;">Status: Disconnected</div>
+        <label for="telegram_bridge_url">Bridge 服务器 WebSocket URL</label>
+        <input type="text" id="telegram_bridge_url" class="text_pole" placeholder="例如：ws://127.0.0.1:8080">
+        <div id="telegram_connection_status" style="margin-top: 10px; font-weight: bold;">状态: 已断开连接</div>
     </div>
-    <button id="telegram_connect_button" class="menu_button">Connect</button>
-    <button id="telegram_disconnect_button" class="menu_button">Disconnect</button>
+    <button id="telegram_connect_button" class="menu_button">连接</button>
+    <button id="telegram_disconnect_button" class="menu_button">断开连接</button>
 </div>
