--- a/settings.html
+++ b/settings.html
@@ -1,11 +1,21 @@
 <!-- settings.html -->
-<div class="list-group-item">
-    <h4>Telegram Connector 设置</h4>
-    <div class="form-group">
-        <label for="telegram_bridge_url">Bridge 服务器 WebSocket URL</label>
-        <input type="text" id="telegram_bridge_url" class="text_pole" placeholder="例如：ws://127.0.0.1:8080">
+<div class="list-group-item" id="telegram-connector-settings">
+    <!-- 这是可点击的标题栏 -->
+    <div class="sub-title open-settings">
+        <h4>Telegram Connector</h4>
+        <div class="sub-title-arrow"></div>
+    </div>
+
+    <!-- 这是可折叠的内容区域，默认是隐藏的 -->
+    <div class="settings-content" style="display: none;">
+        <div class="form-group">
+            <label for="telegram_bridge_url">Bridge 服务器 WebSocket URL</label>
+            <input type="text" id="telegram_bridge_url" class="text_pole" placeholder="例如：ws://127.0.0.1:8080">
+        </div>
+        <div class="form-group">
+            <button id="telegram_connect_button" class="menu_button">连接</button>
+            <button id="telegram_disconnect_button" class="menu_button">断开连接</button>
+        </div>
         <div id="telegram_connection_status" style="margin-top: 10px; font-weight: bold;">状态: 已断开连接</div>
     </div>
-    <button id="telegram_connect_button" class="menu_button">连接</button>
-    <button id="telegram_disconnect_button" class="menu_button">断开连接</button>
 </div>
