feat: 添加自动连接功能
- 在index.js中添加了自动连接设置，用户可以选择在页面加载时自动连接到Telegram。
- 更新settings.html，增加了“页面加载时自动连接”的复选框，用户可以通过该选项控制自动连接功能。
- 修改连接状态提示信息，以更好地反映当前连接状态。

--- a/settings.html
+++ b/settings.html
@@ -9,12 +9,19 @@
             <div class="telegram-connector_block flex-container">
                 <label for="telegram_bridge_url">Bridge 服务器 WebSocket URL</label>
                 <input type="text" id="telegram_bridge_url" class="text_pole" placeholder="例如：ws://127.0.0.1:8080">
-                <div id="telegram_connection_status" style="margin-top: 10px; font-weight: bold;">状态: 已断开连接</div>
+                <div id="telegram_connection_status" style="margin-top: 10px; font-weight: bold;">状态： 请点击连接按钮</div>
             </div>
 
             <div class="telegram-connector_block flex-container">
                 <input id="telegram_connect_button" class="menu_button" type="button" value="连接" />
-                <input id="telegram_disconnect_button" class="menu_button" type="button" value="断开连接" />
+                <input id="telegram_disconnect_button" class="menu_button" type="button" value="断开" />
+            </div>
+
+            <div class="telegram-connector_block flex-container">
+                <label class="checkbox_label" for="telegram_auto_connect">
+                    <input type="checkbox" id="telegram_auto_connect">
+                    <span>页面加载时自动连接</span>
+                </label>
             </div>
 
             <hr class="sysHR" />
