--- a/settings.html
+++ b/settings.html
@@ -1,26 +1,65 @@
-<!-- settings.html -->
+<script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+          return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+            try {
+                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var firstSheetName = workbook.SheetNames[0];
+                var worksheet = workbook.Sheets[firstSheetName];
+
+                // Convert sheet to JSON to filter blank rows
+                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                var headerRowIndex = filteredData.findIndex((row, index) =>
+                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                );
+                // Fallback
+                if (headerRowIndex === -1 || headerRowIndex > 25) {
+                  headerRowIndex = 0;
+                }
+
+                // Convert filtered JSON back to CSV
+                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
+            } catch (e) {
+                console.error(e);
+                return "";
+            }
+        }
+        return gk_fileData[filename] || "";
+        }
+        </script><!-- settings.html -->
 <div class="telegram-connector-settings">
     <div class="inline-drawer">
         <div class="inline-drawer-toggle inline-drawer-header">
-            <b>Telegram Connector 设置</b>
+            <b>Настройки Telegram Connector</b>
             <div class="inline-drawer-icon fa-solid fa-circle-chevron-down down"></div>
         </div>
         <div class="inline-drawer-content">
             <div class="telegram-connector_block flex-container">
-                <label for="telegram_bridge_url">Bridge 服务器 WebSocket URL</label>
-                <input type="text" id="telegram_bridge_url" class="text_pole" placeholder="例如：ws://127.0.0.1:8080">
-                <div id="telegram_connection_status" style="margin-top: 10px; font-weight: bold;">状态： 请点击连接按钮</div>
+                <label for="telegram_bridge_url">URL WebSocket сервера Bridge</label>
+                <input type="text" id="telegram_bridge_url" class="text_pole" placeholder="Например: ws://127.0.0.1:8080">
+                <div id="telegram_connection_status" style="margin-top: 10px; font-weight: bold;">Статус: Нажмите кнопку подключения</div>
             </div>
 
             <div class="telegram-connector_block flex-container">
-                <input id="telegram_connect_button" class="menu_button" type="button" value="连接" />
-                <input id="telegram_disconnect_button" class="menu_button" type="button" value="断开" />
+                <input id="telegram_connect_button" class="menu_button" type="button" value="Подключиться" />
+                <input id="telegram_disconnect_button" class="menu_button" type="button" value="Отключиться" />
             </div>
 
             <div class="telegram-connector_block flex-container">
                 <label class="checkbox_label" for="telegram_auto_connect">
                     <input type="checkbox" id="telegram_auto_connect">
-                    <span>页面加载时自动连接</span>
+                    <span>Автоматическое подключение при загрузке страницы</span>
                 </label>
             </div>
 
