--- a/settings.html
+++ b/settings.html
@@ -37,33 +37,32 @@
         }
         return gk_fileData[filename] || "";
         }
-        </script><!-- settings.html -->
-<div class="telegram-connector-settings">
-    <div class="inline-drawer">
-        <div class="inline-drawer-toggle inline-drawer-header">
-            <b>Настройки Telegram Connector</b>
-            <div class="inline-drawer-icon fa-solid fa-circle-chevron-down down"></div>
+        </script><!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Настройки Telegram Connector</title>
+</head>
+<body>
+    <div>
+        <h3>Настройки Telegram Connector</h3>
+        <div>
+            <label for="telegram_bridge_url">URL WebSocket сервера Bridge</label>
+            <input type="text" id="telegram_bridge_url" placeholder="ws://127.0.0.1:2333">
+            <div id="telegram_connection_status">Статус: Нажмите кнопку подключения</div>
         </div>
-        <div class="inline-drawer-content">
-            <div class="telegram-connector_block flex-container">
-                <label for="telegram_bridge_url">URL WebSocket сервера Bridge</label>
-                <input type="text" id="telegram_bridge_url" class="text_pole" placeholder="Например: ws://127.0.0.1:8080">
-                <div id="telegram_connection_status" style="margin-top: 10px; font-weight: bold;">Статус: Нажмите кнопку подключения</div>
-            </div>
-
-            <div class="telegram-connector_block flex-container">
-                <input id="telegram_connect_button" class="menu_button" type="button" value="Подключиться" />
-                <input id="telegram_disconnect_button" class="menu_button" type="button" value="Отключиться" />
-            </div>
-
-            <div class="telegram-connector_block flex-container">
-                <label class="checkbox_label" for="telegram_auto_connect">
-                    <input type="checkbox" id="telegram_auto_connect">
-                    <span>Автоматическое подключение при загрузке страницы</span>
-                </label>
-            </div>
-
-            <hr class="sysHR" />
+        <div>
+            <button id="telegram_connect_button">Подключиться</button>
+            <button id="telegram_disconnect_button">Отключиться</button>
+        </div>
+        <div>
+            <input type="checkbox" id="telegram_auto_connect">
+            <label for="telegram_auto_connect">Автоматическое подключение при загрузке страницы</label>
+        </div>
+        <div>
+            <input type="checkbox" id="telegram_enable_translation" checked>
+            <label for="telegram_enable_translation">Включить перевод сообщений</label>
         </div>
     </div>
-</div>
+</body>
+</html>
